--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "webpack": "^4.39.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-jest": "^24.8.0",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^24.8.0",
-    "regenerator-runtime": "^0.13.3"
+    "jest": "^24.8.0"
   }
 }
